# gbcli

./: Makefile  pyproject.toml
.github/workflows/: ci.yaml
gbcli/: cli.py  client.py
gbcli/logger/: __init__.py  dummy.py  github.py  interface.py
tests/cli/: conftest.py  test_counter.py  test_get.py  test_hello.py
tests/client/: test_client.py
