[tool.poetry]
name = "gbcli"
version = "0.1.0"
description = ""
authors = ["Jair Henrique <jair.henrique@gmail.com>"]
readme = "README.md"
packages = [{include = "gbcli"}]

[tool.poetry.scripts]
gbcli = "gbcli.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
github-action-utils = "^1.1.0"
httpx = "^0.24.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
ruff = "^0.0.279"
black = "^23.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
